# auto-quant-tool

./: .gitignore  README.md  main.py  pyproject.toml  sample_bad.yaml  sample_llm.yaml  sample_vision.yaml
auto_quant/: cli.py
auto_quant/benchmark/: real_runner.py  soc_profiles.json
auto_quant/ingest/: hf_fetcher.py
auto_quant/quantize/: gguf_backend.py  gptq_backend.py  tflite_backend.py
auto_quant/report/: pareto.py
auto_quant_tool/: cli.py  config.py
auto_quant_tool/benchmark/: real_runner.py  results.py  sim_runner.py
auto_quant_tool/ingest/: hf_fetcher.py
auto_quant_tool/quantize/: gguf_backend.py  tflite_backend.py
auto_quant_tool/report/: exporter.py  pareto.py
auto_quant_tool/ui/: app.py
notebooks/: colab_tflite.ipynb  kaggle_gptq.ipynb  kaggle_tflite.ipynb
